--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: "Code";
+    src: url("./assets/font/Code.ttf") format("truetype");
+}
+
+* {
+    font-family: "Code";
+    letter-spacing: -4px;
+}
+
 body {
     height: 100vh;
     width: 100vw;
