--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: "Code";
-    src: url("./assets/font/Code.ttf") format("truetype");
+    font-family: "pzim";
+    src: url("./assets/font/pzim.ttf") format("truetype");
 }
 
 * {
-    font-family: "Code";
+    font-family: "pzim";
     letter-spacing: -4px;
 }
 
