--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,8 @@ body {
     padding: 0;
     margin: 0;
 
+    background-color: #171717;
+
     display: flex;
     align-items: center;
     justify-content: center;
